Change callback to context and change height to somewhat fix popup overflow

--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -164,6 +164,7 @@ $handle-color: #ddd !default;
 	position: relative;
 	overflow: auto;
 	font-size: 12px;
+	height: 100%;
 
 	.popup-wrapper {
 		position: absolute;
